# SimpleBashUtils

./: .gitignore  CMakeLists.txt
src/cat/: Makefile  cat.h  s21_cat.c
src/grep/: Makefile  s21_grep.c  s21_grep.h  test_1_grep.txt
